{
    "version": 1,
    "name": "Player_IA",
    "maps": [
        {
            "name": "onFoot",
            "id": "3c30828e-b4bb-47fe-8a04-deeb4d33c291",
            "actions": [
                {
                    "name": "move",
                    "type": "PassThrough",
                    "id": "da787077-194d-482a-a37e-504ed2102fd2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "look",
                    "type": "PassThrough",
                    "id": "fc2ecf76-59c8-4d9a-82b7-001c64c975bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "f940330e-d7a1-4cec-9097-c43161439cbc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "aim",
                    "type": "Button",
                    "id": "4eeed903-ef0a-4f57-9720-144297b88a6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bb92686c-d622-4728-bcca-d89cb5092448",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0feaa058-d2b0-4789-a0b3-996639b16248",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "028fc889-ebc4-473f-8859-55d9349c4f9c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "974e9dc7-8e3a-4060-b1e8-282b0087d04e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5f60fc9a-9a60-490e-b8f8-2d11e31bd430",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "82e43125-e416-4ff9-b53d-1428c336e6c4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72f4c758-59a6-4a50-8b0a-cdcfb8c096d2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36ff51db-e046-45aa-af88-7cc1b83159fe",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.01,pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}